Another try to not create an unwanted run

--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -1,10 +1,11 @@
 name: publish page
 #Trigger for the workflow
   #Triggers only on push on master
-#on:
-#  push:
-#    branches:
+on:
+  push:
+    branches:
 #      - master
+       - test
       
 jobs:
   build-test-deploy:
