--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -2,23 +2,23 @@ name: publish page
 #Trigger for the workflow
   #Triggers only on push on master
 on:
-  push:
-    branches:
-#      - master
-       - test
+  pull-request:
+    branches: [ "master" ]
       
 jobs:
   build-test-deploy:
     runs-on: ubuntu-latest
+    strategy: 
+      node-version: [12.x, 14.x, 16.x]
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Set-up Node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: "10.x"
+          node-version:  ${{ matrix.node-version }}
       - run: npm install
-      - run: npm run build
+      - run: npm run build --if-present
       - run: npm test
       - name: Deploy
         uses: crazy-max/ghaction-github-pages@v1
