--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -2,6 +2,8 @@ name: publish page
 #Trigger for the workflow
   #Triggers only on push on master
 on:
+  push:
+    branches: [ "master" ]
   pull-request:
     branches: [ "master" ]
       
