--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -4,7 +4,7 @@ name: publish page
 on:
   push:
     branches: [ "master" ]
-  pull-request:
+  pull_request:
     branches: [ "master" ]
       
 jobs:
