--- a/package.json
+++ b/package.json
@@ -3,6 +3,28 @@
 	"version": "1.0",
 	"private": true,
 	"homepage": "https://qped.github.io/",
+	"dependencies": {
+		"@emotion/react": "^11.5.0",
+		"@emotion/styled": "^11.3.0",
+		"@jsonforms/core": "3.0.0-alpha.3",
+		"@jsonforms/material-renderers": "3.0.0-alpha.3",
+		"@jsonforms/react": "3.0.0-alpha.3",
+		"@mui/icons-material": "^5.2.0",
+		"@mui/lab": "^5.0.0-alpha.58",
+		"@mui/material": "^5.2.2",
+		"@mui/styles": "^5.2.3",
+		"@types/node": "^14.14.14",
+		"@types/react": "^17.0.0",
+		"@types/react-dom": "^17.0.0",
+		"react": "^17.0.1",
+		"react-dom": "^17.0.1",
+		"typescript": "^4.1.3"
+	},
+	"devDependencies": {
+		"cypress": "^6.1.0",
+		"react-scripts": "^4.0.1",
+		"start-server-and-test": "^1.11.6"
+	},
 	"scripts": {
 		"predeploy": "npm run build",
 		"deploy": "gh-pages -d build",
@@ -12,6 +34,15 @@
 		"eject": "react-scripts eject",
 	},
 	"eslintConfig": {
-		"extends": "react-app"
-	}
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": [
+		">0.2%",
+		"not dead",
+		"not ie <= 11",
+		"not op_mini all"
+	]
 }
