--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -10,8 +10,9 @@ on:
 jobs:
   build-test-deploy:
     runs-on: ubuntu-latest
-    strategy: 
-      node-version: [12.x, 14.x, 16.x]
+    strategy:
+      matrix:
+        node-version: [12.x, 14.x, 16.x]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
