Updated url in package to be correct url used by github

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "qped-github-pages",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://qped.github.io/",
+  "homepage": "https://alucard2112.github.io/qped.github.io/",
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
