--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -3,7 +3,7 @@ name: publish page
   #Triggers only on push on master
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "development" ]
       
 jobs:
   build-test-deploy:
@@ -30,6 +30,9 @@ jobs:
           npm install --save @jsonforms/material-renderers
           npm install --save @mui/material
           npm install --save @mui/icons-material
+          
+      - name: Build JSON-forms
+        run: npm run build
         
       - name: Install github pages
         run: npm install gh-pages --save-dev
