--- a/.github/workflows/test-before-merge.yml
+++ b/.github/workflows/test-before-merge.yml
@@ -2,7 +2,7 @@ name: publish page
 #Trigger for the workflow
   #Triggers only on push on master
 on:
-  merge_request:
+  pull_request:
     branches: [ "master" ]
       
 jobs:
