--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "react": "^17.0.1",
+    "bootstrap": "^5.1.3",
+    "react": "^17.0.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.1",
+    "react-markdown": "^8.0.3",
+    "remark-gfm": "^3.0.1",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
@@ -29,7 +33,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-	"predeploy": "npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run --config video=false",
