--- a/.github/workflows/test-before-merge.yml
+++ b/.github/workflows/test-before-merge.yml
@@ -23,6 +23,12 @@ jobs:
       - name: Install dependencies
         run: npm install
         
+      - name: Install python dependencies
+        run: pip install json-schema-for-humans
+        
+      - name: Run JSON Schema for humans
+        run: sh src/doc2desc.sh
+        
       - name: Run tests
         run: npm test
         
