--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.1",
     "react-markdown": "^8.0.3",
+    "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
     "typescript": "^4.1.3"
   },
