--- a/package.json
+++ b/package.json
@@ -47,9 +47,7 @@
     ]
   },
   "jest": {
-    "transformIgnorePatterns": [
-		
-    ]
+    "transformIgnorePatterns": []
   },
   "browserslist": [
     ">0.2%",
