--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
+    "@fortawesome/free-brands-svg-icons": "^6.1.2",
+    "@fortawesome/free-solid-svg-icons": "^6.1.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@jsonforms/core": "3.0.0-alpha.3",
     "@jsonforms/material-renderers": "3.0.0-alpha.3",
     "@jsonforms/react": "3.0.0-alpha.3",
@@ -21,11 +25,14 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.1",
     "react-markdown": "^8.0.3",
+    "react-router-dom": "^6.3.0",
+    "react-syntax-highlighter": "^15.5.0",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@types/react-syntax-highlighter": "^15.5.4",
     "cypress": "^6.1.0",
     "react-scripts": "^4.0.1",
     "start-server-and-test": "^1.11.6"
