--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@jsonforms/core": "3.0.0-alpha.3",
-    "@jsonforms/material-renderers": "3.0.0-alpha.3",
-    "@jsonforms/react": "3.0.0-alpha.3",
+    "@jsonforms/core": "3.0.0-rc.1",
+    "@jsonforms/material-renderers": "3.0.0-rc.1",
+    "@jsonforms/react": "3.0.0-rc.1",
     "@mui/icons-material": "^5.2.0",
     "@mui/lab": "^5.0.0-alpha.58",
     "@mui/material": "^5.2.2",
@@ -32,9 +32,10 @@
     "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@types/jest": "^29.0.3",
     "@types/react-syntax-highlighter": "^15.5.4",
     "cypress": "^6.1.0",
-    "react-scripts": "^4.0.1",
+    "react-scripts": "^5.0.1",
     "start-server-and-test": "^1.11.6"
   },
   "scripts": {
