--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "bootstrap": "^5.1.3",
+    "jsx-runtime": "^1.2.0",
     "react": "^17.0.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.1",
