--- a/.github/workflows/test-before-merge.yml
+++ b/.github/workflows/test-before-merge.yml
@@ -22,6 +22,9 @@ jobs:
           
       - name: Install dependencies
         run: npm install
+
+      - name: Install JSZip
+        run: npm install jszip
         
       - name: Install python dependencies
         run: pip install json-schema-for-humans
