--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^17.0.0",
     "bootstrap": "^5.1.3",
     "jsx-runtime": "^1.2.0",
+    "jszip": "^3.10.1",
     "react": "^17.0.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.1",
@@ -33,14 +34,12 @@
     "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.16.0",
     "@types/jest": "^29.0.3",
     "@types/react-syntax-highlighter": "^15.5.4",
     "cypress": "^6.1.0",
     "react-scripts": "^5.0.1",
-    "start-server-and-test": "^1.11.6",
-    "@babel/plugin-transform-private-property-in-object": "^7.16.0"
-    
-
+    "start-server-and-test": "^1.11.6"
   },
   "scripts": {
     "start": "react-scripts start",
