Update workflow to be in line with other workflow

--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -22,6 +22,9 @@ jobs:
           
       - name: Install dependencies
         run: npm install
+
+      - name: Install JSZip
+        run: npm install jszip
         
       - name: Install github pages
         run: npm install gh-pages --save-dev
