--- a/package.json
+++ b/package.json
@@ -10,36 +10,36 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@jsonforms/core": "3.2.0",
-    "@jsonforms/material-renderers": "3.2.0",
-    "@jsonforms/react": "3.2.0",
-    "@mui/icons-material": "^5.15.14",
-    "@mui/lab": "^5.0.0-alpha.169",
-    "@mui/material": "^5.15.14",
-    "@mui/system": "^5.15.14",
-    "@types/node": "^20.11.30",
-    "@types/react": "^18.2.72",
-    "@types/react-dom": "^18.2.22",
-    "bootstrap": "^5.3.3",
+    "@jsonforms/core": "3.0.0-rc.1",
+    "@jsonforms/material-renderers": "3.0.0-rc.1",
+    "@jsonforms/react": "3.0.0-rc.1",
+    "@mui/icons-material": "^5.2.0",
+    "@mui/lab": "^5.0.0-alpha.58",
+    "@mui/material": "^5.2.2",
+    "@mui/styles": "^5.2.3",
+    "@types/node": "^14.14.14",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "bootstrap": "^5.1.3",
     "jsx-runtime": "^1.2.0",
     "jszip": "^3.10.1",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.10.2",
-    "react-dom": "^18.2.0",
-    "react-markdown": "^9.0.1",
-    "react-router-dom": "^6.22.3",
+    "react": "^17.0.0",
+    "react-bootstrap": "^2.4.0",
+    "react-dom": "^17.0.1",
+    "react-markdown": "^8.0.3",
+    "react-router-dom": "^6.3.0",
     "react-syntax-highlighter": "^15.5.0",
-    "rehype-raw": "^7.0.0",
-    "remark-gfm": "^4.0.0",
+    "rehype-raw": "^6.1.1",
+    "remark-gfm": "^3.0.1",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
-    "@babel/plugin-transform-private-property-in-object": "^7.24.1",
-    "@types/jest": "^29.5.12",
-    "@types/react-syntax-highlighter": "^15.5.11",
-    "cypress": "^13.7.1",
+    "@babel/plugin-transform-private-property-in-object": "^7.16.0",
+    "@types/jest": "^29.0.3",
+    "@types/react-syntax-highlighter": "^15.5.4",
+    "cypress": "^6.1.0",
     "react-scripts": "^5.0.1",
-    "start-server-and-test": "^2.0.3"
+    "start-server-and-test": "^1.11.6"
   },
   "scripts": {
     "start": "react-scripts start",
